# DJI_UE4_poc

./: .gitignore  IVILO_2_24.sln  IVILO_2_24.uproject  closerange_click_positions.json  contours.pickle  requirements.txt  similarity_matrix.pkl  warp_transform.pkl
Source/: Dockerfile  (+6 more)
Source/lumotag/: .gitignore  JETCAMcheck_mobilenet_perf.py  JETCAMcheck_yolo_perf.py  JETCAMtest_send_images_jetson.py  README_IF_FORGOTTEN.md  _3DVisLabLib.py  __init__.py  accelerometer.py  analyse_lumotag.py  analyze_device_behavior.py  bootstrap.py  check_barcode.py  check_mobilenet_perf.py  comms.py  comms_http.py  configs.py  connection_monitor.py  create_test_data.py  decode_clothID.py  decode_clothID_v2.py  factory.py  fake_raspberry_hardware.py  fast_test_server.py  git_info.py  hit_message.py  img_processing.py  lumo_utils.py  lumogun.py  lumogun_y.py  lumogun_zoomA.py  lumogun_zoomB.py  lumoscript.py  lumotag_events.py  math_utils.py  messaging.py  msgs.py  my_collections.py  optimized_barcode_model.tflite  protobuf_generator.py  pyproject.toml  (+34 more)
Source/lumotag/TODO/: todo.list
Source/lumotag/blurbs/: blurble  retroreflective.txt
Source/lumotag/cnn/: _1_aggregate_pickles_into_one_local.py  _2_load_pickle_files_check_images.py  _3B_train_2dcnn_or_test_if_exists.py  _3_test_cnn_train_from_pickle.py  _3_train_cnn_or_test_if_exists.py  _4_test_model_with_images.py  aggregate_pickles_into_one_local.py  barcode_model.h5  check_barcode_classic.py  load_pickle_files_check_images.py  not_cnn_barcode_read.py  test_cnn_train_from_pickle.py
Source/lumotag/generated_protobuffs/: comms_pb2.py  lumotag.comms.rs
Source/lumotag/lumo_handies/: check_images.py
Source/lumotag/protobuffers/: comms.proto  messages.proto
Source/lumotag/research/: reduce_fov_closerange.txt
Source/lumotag/server/: Cargo.toml  build.rs  generate_protobuf.sh  pyproject.toml
Source/scambilight/: NOT_NEEDEDupdate_repo.sh  README.md  async_cam_lib.py  bootstrap.py  bootstrap2.py  bootstrap_remote_leds.py  config_regions.json  example_autostart_rc_local  fisheye_lib.py  hints.plop  pyproject.toml  scambileds_remote_LED.py  scambiloop copy.py  scambiloop.py  scambiloop_OG2.py  scambiloop_backup.py  scambiloop_new_config.py  setup.me  setup.sh  setup_scambileds.sh  test_use_lib.py  update_repo.sh  update_repo_scambileds.sh
account_gen/: README.md  bot.py  example_usage.py  interactions.py  main.py  pyproject.toml  reddit_bot.py  reddit_explorer.py  requirements.txt  subreddit_info.py  subreddit_list.csv  subreddit_list.py  vision.py
sandbox/: .coverage  Dockerfile  Makefile  README.md  docker-compose.yml  main.tf  pyproject.toml  takehome_readme.md
sandbox/app/: main.py  models.py  rate_limiter.py
sandbox/tests/: conftest.py  test_endpoints.py  test_integration.py  test_models.py  test_rate_limiter.py
test_perception_matching/: UI_get_match.py  common.py  convert_video_to_frames.py  dinvo2_embeddings.py  draw_mandal_async.py  folder_dynamic_mosaic.py  folder_get_matches.py  folder_lerp_to_images.py  folder_mosaic_match.py  generate_embeddings.py  generate_test_colour_images.py  get_batch_embeddings.py  get_embeddings.py  get_image_embedding.py  get_image_embedding_DINO.py  get_random_images_from_nested_folder.py  get_sequence_images.py  get_sequence_images_pgvector.py  get_sequence_images_qdrant.py  load_embeddings_into_postgres.py  load_embeddings_into_qdrant.py  main.py  postgres_client.py  postgres_tips  pyproject.toml  qdrant.tips  qdrant_test.py  qdrant_utils.py  requirements.txt  salvaged_code.py  set_up_postgres.py  square_region_packing.py  square_sampling.py  test_async_qdrant.py  test_draw_mandal_async.py  test_draw_mandal_backup.py  test_draw_mandala.py  test_draw_mandala_backup.py  todo.txt
test_perception_matching/embeddings_output/: batch_1_of_1.pickle
(+350 files in other folders)
