[project]
name = "account-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fake-useragent>=2.2.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "praw>=7.8.1",
    "python-dotenv>=1.1.0",
    "selenium>=4.33.0",
    "selenium-stealth>=1.0.6",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
