[project]
name = "lumotag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "gitpython>=3.1.45",
    "numpy==1.24.2",
    "opencv-python>=4.11.0.86",
    "pydantic==2.0",
    "requests>=2.32.4",
    "scikit-image>=0.25.2",
    "cachetools>=5.0.0",
]

