[project]
name = "scambilight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "maturin>=1.8.6",
    "numpy==1.24.2",
    "opencv-python>=4.11.0.86",
    "pika>=1.3.2",
    "protobuf>=6.30.2",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
]
