[project]
name = "scambilight"
version = "0.1.0"
description = "specific to raspberry pi zero w2 using pip freeze"
readme = "README.md"
requires-python = "==3.9.2"
dependencies = [
    "maturin>=1.8.6",
    "numpy>=1.0.0",
    # OpenCV 4.5.1 installed via apt (python3-opencv) on Raspberry Pi Zero W2
    "opencv-python>=4.5.1",
    # "pika>=1.3.2",
    # "protobuf>=6.30.2",
    "requests==2.25.1",
    "scikit-image>=0.18.1",
]
