[package]
name = "server"
version = "0.1.0"
edition = "2021"

[build-dependencies]
prost-build = "0.12"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.17"
futures = "0.3"
log = "0.4"
env_logger = "0.9"
axum = "0.6"
hyper = "0.14"
tower = "0.4"
anyhow = "1.0.93"
prost = "0.12"
bytes = "1.0"
